--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       1. This is a DEMO with random bot analysis + science jokes.
       2. Clone/Fork the project: https://github.com/WebSwiftSEO?tab=repositories
       3. Install as PWA on Android/iPhone.
-      4. Offline support via Service Worker (add service-worker.js).
+      4. Offline support via Service Worker (service-worker.js included).
   =========================================================== -->
 
   <meta name="theme-color" content="#FFD700" />
@@ -19,6 +19,10 @@
   <meta property="og:description" content="Analyze X profiles, detect bots, and laugh while learning!" />
   <meta name="twitter:card" content="summary_large_image" />
 
+  <!-- Link PWA Manifest -->
+  <link rel="manifest" href="manifest.json" />
+
+  <!-- Register the Service Worker -->
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
@@ -28,7 +32,138 @@
   </script>
 
   <style>
-    /* [Same styles as earlier example, omitted for brevity] */
+    body {
+      background-color: black;
+      color: gold;
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 20px;
+    }
+
+    .container {
+      width: 90%;
+      max-width: 600px;
+      margin: auto;
+      padding: 20px;
+      border: 3px solid gold;
+      border-radius: 12px;
+      background: black;
+      box-shadow: 0 0 30px rgba(255, 215, 0, 0.8), 0 0 30px rgba(0, 255, 0, 0.8);
+    }
+
+    h1 {
+      text-shadow: 0 0 15px gold, 0 0 15px green;
+      font-size: 30px;
+      animation: glow 2s infinite alternate;
+    }
+
+    @keyframes glow {
+      from {
+        text-shadow: 0 0 10px gold, 0 0 20px gold;
+      }
+
+      to {
+        text-shadow: 0 0 20px green, 0 0 30px green;
+      }
+    }
+
+    input,
+    button {
+      width: 85%;
+      padding: 12px;
+      margin: 15px 0;
+      border: 2px solid gold;
+      background: black;
+      color: gold;
+      font-size: 18px;
+      text-align: center;
+      border-radius: 8px;
+      box-shadow: 0 0 12px green, 0 0 12px gold;
+    }
+
+    button:hover {
+      background: linear-gradient(45deg, gold, green);
+      color: black;
+      box-shadow: 0 0 20px gold, 0 0 20px green;
+    }
+
+    .share-btn {
+      margin-top: 15px;
+      width: 85%;
+      padding: 20px;
+      font-size: 20px;
+      font-weight: bold;
+      background: linear-gradient(45deg, green, gold);
+      border-radius: 12px;
+      box-shadow: 0 0 20px green, 0 0 20px gold;
+      cursor: pointer;
+    }
+
+    .joke-box {
+      margin-top: 20px;
+      background: #111;
+      color: #0f0;
+      padding: 15px;
+      border-radius: 12px;
+      box-shadow: 0 0 15px #0f0;
+      font-size: 16px;
+      min-height: 50px;
+    }
+
+    .social-links {
+      margin-top: 40px;
+    }
+
+    .social-links a {
+      display: block;
+      font-size: 22px;
+      color: red;
+      text-decoration: none;
+      font-weight: bold;
+      margin: 10px 0;
+    }
+
+    footer {
+      margin-top: 40px;
+      padding: 20px;
+      font-size: 14px;
+      color: gray;
+    }
+
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 9999;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background-color: rgba(0, 0, 0, 0.8);
+    }
+
+    .modal-content {
+      background-color: #111;
+      margin: 10% auto;
+      padding: 20px;
+      border: 2px solid #FFD700;
+      width: 80%;
+      color: #FFD700;
+      border-radius: 12px;
+      box-shadow: 0 0 20px #FFD700;
+    }
+
+    .close-btn {
+      color: red;
+      float: right;
+      font-size: 28px;
+      font-weight: bold;
+      cursor: pointer;
+    }
+
+    .close-btn:hover {
+      color: #fff;
+    }
   </style>
 </head>
 
@@ -64,6 +199,7 @@
     </footer>
   </div>
 
+  <!-- Info Modal -->
   <div id="infoModal" class="modal">
     <div class="modal-content">
       <span class="close-btn" onclick="closeInfo()">&times;</span>
