--- a/index.html
+++ b/index.html
@@ -107,6 +107,18 @@
       margin: 10px 0;
     }
 
+    .modal {
+  display: none;
+  position: fixed; /* ✅ Fixed at top of screen */
+  top: 0;          /* ✅ No more under the footer */
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,0.8);
+  z-index: 9999;   /* ✅ Stay on top of everything */
+    }
+
+
     footer {
       margin-top: 40px;
       padding: 20px;
