--- a/index.html
+++ b/index.html
@@ -118,7 +118,6 @@
   z-index: 9999;   /* ✅ Stay on top of everything */
     }
 
-
     footer {
       margin-top: 40px;
       padding: 20px;
@@ -151,6 +150,14 @@
       <a href="https://twitter.com/DoctorKarl" target="_blank">Follow Dr Karl on Twitter</a>
       <a href="https://www.facebook.com/DrKarl/" target="_blank">Follow Dr Karl on Facebook</a>
       <a href="https://www.instagram.com/doctorkarl/" target="_blank">Follow Dr Karl on Instagram</a>
+    </div>
+
+      <!-- Info Modal at end of body, not in footer! -->
+    <div id="infoModal" class="modal">
+    <div class="modal-content">
+      <span class="close-btn" onclick="closeInfo()">&times;</span>
+      <h2>About Digital Dr Karl 🧑‍🔬</h2>
+      <p>Analyze profiles, detect bots, and have a laugh!</p>
     </div>
 
     <footer>
@@ -273,6 +280,9 @@
     function closeInfo() {
       document.getElementById('infoModal').style.display = 'none';
     }
+    // Refresh joke when Analyze is clicked
+      document.getElementById('jokeBox').innerText = jokes[Math.floor(Math.random() * jokes.length)];
+
   </script>
 
 </body>
