--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <!-- =====================================================
       ✅ DIGITAL DR KARL DEMO WEBSITE - FINAL VERSION ✅
   =========================================================== -->
-
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta name="theme-color" content="#FFD700" />
   <meta property="og:title" content="Digital Dr Karl 🧑‍🔬" />
   <meta property="og:description" content="Analyze X profiles, detect bots, and laugh while learning!" />
