--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
     <button class="share-btn" onclick="openInfo()">ℹ️ Info & Features</button>
 
     <div class="social-links">
-      <a href="https://twitter.com/DoctorKarl" target="_blank">Follow Dr Karl on Twitter</a>
-      <a href="https://www.facebook.com/DrKarl/" target="_blank">Follow Dr Karl on Facebook</a>
-      <a href="https://www.instagram.com/doctorkarl/" target="_blank">Follow Dr Karl on Instagram</a>
+      <a href="https://twitter.com/DoctorKarl" target="_blank">Dr Karl on Twitter</a>
+      <a href="https://www.facebook.com/DrKarl/" target="_blank">Dr Karl on Facebook</a>
+      <a href="https://www.instagram.com/doctorkarl/" target="_blank">Dr Karl on Instagram</a>
     </div>
 
     <footer>
